package gb.interfaces.figures;

public interface Area {
    double getArea();

}
