package gb.interfaces.figures;

public interface Circumference {
    double getCircumference();
}
