package gb.interfaces.figures;

abstract class ClosedCurve extends TwoDimFigure {
}
