package gb.interfaces.figures;

public interface Perimeter {
    double getPerimeter();
}
