package gb.interfaces.figures;

public class Square extends Rectangle {
    public Square(double sideA) throws InvalidArgsException {
        super(sideA, sideA);
    }


}
